- when a long-running action needs to be cancelled on shutdown, the message
  that was processed by it is now preserved. This finishes support for
  guaranteed delivery of messages (if the output supports it, of course)
- fixed bug in output module interface, see
  http://sourceforge.net/tracker/index.php?func=detail&aid=1881008&group_id=123448&atid=696552
---------------------------------------------------------------------------
Version 3.10.3 (rgerhards), 2008-01-28
- fixed a bug with standard template definitions (not a big deal) - thanks
  to varmojfekoj for spotting it
- run-time instrumentation added
- implemented disk-assisted queue mode, which enables on-demand disk
  spooling if the queue's in-memory queue is exhausted
- implemented a dynamic worker thread pool for processing incoming
  messages; workers are started and shut down as need arises
- implemented a run-time instrumentation debug package
- implemented the $MainMsgQueueSaveOnShutdown config directive
- implemented the $MainMsgQueueWorkerThreadMinimumMessages config directive
- implemented the $MainMsgQueueTimeoutWorkerThreadShutdown config directive
---------------------------------------------------------------------------
Version 3.10.2 (rgerhards), 2008-01-14
- added the ability to keep stop rsyslogd without the need to drain
  the main message queue. In disk queue mode, rsyslog continues to
  run from the point where it stopped. In case of a system failure, it
  continues to process messages from the last checkpoint.
- fixed a bug that caused a segfault on startup when no $WorkDir directive
  was specified in rsyslog.conf
- provided more fine-grain control over shutdown timeouts and added a
  way to specify the enqueue timeout when the main message queue is full
- implemented $MainMsgQueueCheckpointInterval config directive
- implemented $MainMsgQueueTimeoutActionCompletion config directive
- implemented $MainMsgQueueTimeoutEnqueue config directive